--- a/frontend-bingo-velez/src/app/components/shared/sidenav/sidenav.component.html
+++ b/frontend-bingo-velez/src/app/components/shared/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<!-- <mat-sidenav-container>
     <mat-sidenav>Menu</mat-sidenav>
     <section>
       <div class="menu-title">Bingo Velez</div>
@@ -45,4 +45,4 @@
         </div>
       </div>
     </section>
-  </mat-sidenav-container>
+  </mat-sidenav-container> -->
