--- a/frontend-bingo-velez/src/app/app.component.html
+++ b/frontend-bingo-velez/src/app/app.component.html
@@ -1,16 +1,10 @@
 <div *ngIf="canMenuVisible" class="sidebar">
-    <mat-drawer-container class="page-body" autosize [hasBackdrop]="false">
-      <app-navbar (toogle)="drawer.toggle()"></app-navbar>
-      <mat-drawer #drawer class="side-nav" mode="side">
-        <app-sidenav></app-sidenav>
-      </mat-drawer>
-  
-      <div class="content">
-        <router-outlet></router-outlet>
-      </div>
-    </mat-drawer-container>
+  <app-navbar></app-navbar>
+  <div class="content">
+    <router-outlet></router-outlet>
   </div>
+</div>
 
 <div *ngIf="!canMenuVisible">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
