--- a/frontend-bingo-velez/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend-bingo-velez/src/app/components/shared/navbar/navbar.component.html
@@ -30,6 +30,7 @@
       <li><a class="dropdown-item" href="#" [routerLink]="['/pages/profile/1']">Profile</a></li>
       <li><a class="dropdown-item" href="#" [routerLink]="['/pages/settings']">Settings</a></li>
       <li><a class="dropdown-item" href="#" [routerLink]="['/pages/users']">Usuarios</a></li>
+      <li><a class="dropdown-item" (click)="Logout()">Logout</a></li>
     </ul>
   </div>
 </mat-toolbar>
