--- a/frontend-bingo-velez/src/app/components/pages/login/login.component.html
+++ b/frontend-bingo-velez/src/app/components/pages/login/login.component.html
@@ -8,21 +8,35 @@
       <form [autocomplete]="false" [formGroup]="sinupForm">
         <h1>Registro de usuarios</h1>
         <input type="text" placeholder="Name" formControlName="NAME" />
+        <small *ngIf="isValid('NAME')" class="text-danger">
+          El nombre es invalido
+        </small>
         <input type="email" placeholder="Email" formControlName="EMAIL" />
+        <small *ngIf="isValid('EMAIL')" class="text-danger">
+          El email es invalido
+        </small>
         <input type="password" placeholder="Password" formControlName="PASSWORD" />
+        <small *ngIf="isValid('PASSWORD')" class="text-danger">
+          La contrasena es invalida
+        </small>
         <input [hidden]="!canShowCodeInput" type="password" placeholder="Code" formControlName="CODE" />
+        <small *ngIf="isValid('CODE')" class="text-danger">
+          El codigo es invalido
+        </small>
         <input [hidden]="true" type="password" placeholder="Code" formControlName="ROLE" />
         <input [hidden]="true" type="password" placeholder="Code" formControlName="STATUS" />
+        <br>
         <button (click)="sendCode()" [hidden]="!isVerifyMoment">Verificar</button>
         <button (click)="signUp()" [hidden]="isVerifyMoment">Registrarme</button>
       </form>
     </div>
+
     <div class="form-container sign-in-container">
       <form autocomplete="off"[formGroup]="siningForm">
         <h1>Login</h1>
         <input type="email" placeholder="Email" formControlName="email" />
         <input type="password" placeholder="Password" formControlName="password" />
-        <a>Olvidaste tu contrasena?</a>
+        <a style="cursor: pointer;" (click)="showModal()">Olvidaste tu contrasena?</a>
         <button (click)="signIn()">Ingresar</button>
       </form>
     </div>
@@ -41,4 +55,5 @@
       </div>
     </div>
   </div>
+
 </div>
