--- a/frontend-bingo-velez/src/app/components/pages/profile/profile.component.html
+++ b/frontend-bingo-velez/src/app/components/pages/profile/profile.component.html
@@ -7,22 +7,8 @@
                         <div class="card-body profile-card">
                             <div class="mt-4"> <img src="../assets/images/users/5.jpg" class="rounded-circle"
                                     width="150" />
-                                <h4 class="card-title mt-2">Hanna Gover</h4>
-                                <h6 class="card-subtitle">Accoubts Manager Amix corp</h6>
-                                <div class="row text-center justify-content-center">
-                                    <div class="col-4">
-                                        <a href="javascript:void(0)" class="link">
-                                            <i class="icon-people" aria-hidden="true"></i>
-                                            <span class="value-digit">254</span>
-                                        </a>
-                                    </div>
-                                    <div class="col-4">
-                                        <a href="javascript:void(0)" class="link">
-                                            <i class="icon-picture" aria-hidden="true"></i>
-                                            <span class="value-digit">54</span>
-                                        </a>
-                                    </div>
-                                </div>
+                                <h4 class="card-title mt-2"> {{ userProfile?.NAME }} </h4>
+                                <h6 class="card-subtitle"> {{ userProfile.ROLE === "ADMIN_ROLE" ? "ADMINISTRADOR" : "USUARIO" }} </h6>
                             </div>
                         </div>
                     </div>
@@ -31,58 +17,34 @@
                 <div class="col-lg-8 col-xlg-9 col-md-7">
                     <div class="card">
                         <div class="card-body">
-                            <form class="form-horizontal form-material mx-2">
+                            <form class="form-horizontal form-material mx-2" [formGroup]="profileForm">
                                 <div class="form-group">
-                                    <label class="col-md-12 mb-0">Full Name</label>
+                                    <label class="col-md-12 mb-0">Nombre</label>
                                     <div class="col-md-12">
-                                        <input type="text" placeholder="Johnathan Doe"
+                                        <input formControlName="NAME" type="text" placeholder="Johnathan Doe"
                                             class="form-control ps-0 form-control-line">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="example-email" class="col-md-12">Email</label>
+                                    <label for="example-email" class="col-md-12">Correo</label>
                                     <div class="col-md-12">
-                                        <input type="email" placeholder="johnathan@admin.com"
+                                        <input type="email" formControlName="EMAIL" placeholder="johnathan@admin.com"
                                             class="form-control ps-0 form-control-line" name="example-email"
                                             id="example-email">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-md-12 mb-0">Password</label>
-                                    <div class="col-md-12">
-                                        <input type="password" value="password"
-                                            class="form-control ps-0 form-control-line">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-md-12 mb-0">Phone No</label>
-                                    <div class="col-md-12">
-                                        <input type="text" placeholder="123 456 7890"
-                                            class="form-control ps-0 form-control-line">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-md-12 mb-0">Message</label>
-                                    <div class="col-md-12">
-                                        <textarea rows="5" class="form-control ps-0 form-control-line"></textarea>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-12">Select Country</label>
+                                    <label class="col-sm-12">Seleciona rol</label>
                                     <div class="col-sm-12 border-bottom">
-                                        <select class="form-select shadow-none ps-0 border-0 form-control-line">
-                                            <option>London</option>
-                                            <option>India</option>
-                                            <option>Usa</option>
-                                            <option>Canada</option>
-                                            <option>Thailand</option>
+                                        <select [disabled]="userProfile.ROLE !== 'ADMIN_ROLE'" formControlName="ROLE" class="form-select shadow-none ps-0 border-0 form-control-line">
+                                            <option value="ADMIN_ROLE">ADMINISTRADOR</option>
+                                            <option value="USER_ROLE">USUARIO</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-sm-12 d-flex">
-                                        <button class="btn btn-success mx-auto mx-md-0 text-white">Update
-                                            Profile</button>
+                                        <button style="width: 100%;" (click)="updateProfile()" class="btn btn-success mx-auto mx-md-0 text-white">Actualizar perfil</button>
                                     </div>
                                 </div>
                             </form>
