--- a/frontend-bingo-velez/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend-bingo-velez/src/app/components/shared/navbar/navbar.component.html
@@ -1,51 +1,8 @@
-<!-- <mat-toolbar color="primary" class="navbar-container">
-  <span class="menu-item" [routerLink]="['/pages/home']">Bingo Velez</span>
-
-  <span class="fill-space"></span>
-
-  <mat-icon
-    *ngIf="showMenu"
-    [matMenuTriggerFor]="menu"
-    class="menu-item clickable"
-    >more_vert</mat-icon
-  >
-  <mat-menu #menu="matMenu">
-    <button mat-menu-item>
-      <mat-icon>exit_to_app</mat-icon>
-      <span>Logout</span>
-    </button>
-  </mat-menu>
-
-  <div class="dropdown">
-    <button
-      class="btn btn-secondary dropdown-toggle"
-      type="button"
-      id="dropdownMenuButton1"
-      data-bs-toggle="dropdown"
-      aria-expanded="false"
-    >
-      Escobarty3
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <li><a class="dropdown-item" href="#" [routerLink]="['/pages/profile/1']">Profile</a></li>
-      <li><a class="dropdown-item" href="#" [routerLink]="['/pages/settings']">Settings</a></li>
-      <li><a class="dropdown-item" href="#" [routerLink]="['/pages/users']">Usuarios</a></li>
-      <li><a class="dropdown-item" (click)="Logout()">Logout</a></li>
-    </ul>
-  </div>
-</mat-toolbar> -->
-
 <header class="topbar" data-navbarbg="skin6">
   <nav class="navbar top-navbar navbar-expand-md navbar-dark">
     <div class="navbar-header" data-logobg="skin6">
-      <!-- ============================================================== -->
-      <!-- Logo -->
-      <!-- ============================================================== -->
       <a class="navbar-brand ms-4" href="index.html">
-        <!-- Logo icon -->
         <b class="logo-icon">
-          <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
-          <!-- Dark Logo icon -->
           <img
             src="../assets/images/logo-light-icon.png"
             alt="homepage"
@@ -63,21 +20,12 @@
           />
         </span>
       </a>
-      <!-- ============================================================== -->
-      <!-- End Logo -->
-      <!-- ============================================================== -->
-      <!-- ============================================================== -->
-      <!-- toggle and nav items -->
-      <!-- ============================================================== -->
       <a
         class="nav-toggler waves-effect waves-light text-white d-block d-md-none"
         href="javascript:void(0)"
         ><i class="ti-menu ti-close"></i
       ></a>
     </div>
-    <!-- ============================================================== -->
-    <!-- End Logo -->
-    <!-- ============================================================== -->
     <div
       class="navbar-collapse collapse"
       id="navbarSupportedContent"
@@ -114,14 +62,7 @@
           </form>
         </li>
       </ul>
-
-      <!-- ============================================================== -->
-      <!-- Right side toggle and nav items -->
-      <!-- ============================================================== -->
       <ul class="navbar-nav">
-        <!-- ============================================================== -->
-        <!-- User profile and search -->
-        <!-- ============================================================== -->
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-muted waves-effect waves-dark"
@@ -130,7 +71,9 @@
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
-          >Markarn Doe
+            (click)="goToProfile()"
+          >
+          {{ userName }}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown"></ul>
         </li>
