--- a/frontend-bingo-velez/src/app/components/shared/sidenav/sidenav.component.html
+++ b/frontend-bingo-velez/src/app/components/shared/sidenav/sidenav.component.html
@@ -18,7 +18,7 @@
           <a
             class="sidebar-link waves-effect waves-dark sidebar-link"
             aria-expanded="false"
-            [routerLink]="['/pages/profile/1']"
+            (click)="goToProfile()"
           >
             <i class="mdi me-2 mdi-account-check"></i
             ><span class="hide-menu">Profile</span></a
@@ -42,6 +42,50 @@
             [routerLink]="['/pages/desactivatedUsers']"
             ><i class="mdi me-2 mdi-table"></i
             ><span class="hide-menu">Usuarios inactivos</span></a
+          >
+        </li>
+
+        <li class="sidebar-item">
+          <a
+            class="sidebar-link waves-effect waves-dark sidebar-link"
+            href="table-basic.html"
+            aria-expanded="false"
+            [routerLink]="['/pages/winners']"
+            ><i class="mdi me-2 mdi-table"></i
+            ><span class="hide-menu">Jugadores</span></a
+          >
+        </li>
+
+        <li class="sidebar-item">
+          <a
+            class="sidebar-link waves-effect waves-dark sidebar-link"
+            href="table-basic.html"
+            aria-expanded="false"
+            [routerLink]="['/pages/plays']"
+            ><i class="mdi me-2 mdi-table"></i
+            ><span class="hide-menu">Jugadas</span></a
+          >
+        </li>
+
+        <li class="sidebar-item">
+          <a
+            class="sidebar-link waves-effect waves-dark sidebar-link"
+            href="table-basic.html"
+            aria-expanded="false"
+            [routerLink]="['/pages/players']"
+            ><i class="mdi me-2 mdi-table"></i
+            ><span class="hide-menu">Ganadores</span></a
+          >
+        </li>
+
+        <li class="sidebar-item">
+          <a
+            class="sidebar-link waves-effect waves-dark sidebar-link"
+            href="table-basic.html"
+            aria-expanded="false"
+            [routerLink]="['/pages/settings']"
+            ><i class="mdi me-2 mdi-table"></i
+            ><span class="hide-menu">Configuraciones</span></a
           >
         </li>
       </ul>
