matenimiento de jugadores y jugadas (falta mantenimiento de ganadores y renderizar vistas de inactivos en jugadores y jugadas)

--- a/frontend-bingo-velez/src/app/app.component.html
+++ b/frontend-bingo-velez/src/app/app.component.html
@@ -6,6 +6,6 @@
   </div>
 </div>
 
-<div *ngIf="!canMenuVisible">
+<div class="container" *ngIf="!canMenuVisible">
   <router-outlet></router-outlet>
 </div>
