--- a/frontend-bingo-velez/src/app/components/pages/plays/plays.component.html
+++ b/frontend-bingo-velez/src/app/components/pages/plays/plays.component.html
@@ -1,1 +1,27 @@
-<p>plays works!</p>
+<mat-card style="margin-top: 40px;">
+    <div class="table-responsive">
+        <button class="btn btn-secondary" (click)="openCreatePlayDialog()">Crear jugada</button>
+        <table class="table">
+            <caption>Listado de jugadas</caption>
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Monto</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let play of plays">
+                    <th scope="row"> {{ play.id }} </th>
+                    <td> {{ play.name }} </td>
+                    <td> {{ play.monto | currency }} </td>
+                    <td>
+                        <button class="btn btn-warning" (click)="openUpdatePlayDialog(play)" style="margin-right: 5px;">Actualizar</button>
+                        <button class="btn btn-danger" (click)="deletePlay(play)">Eliminar</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</mat-card>
