Se terminaron los mantenimientos, falta el modulo de ganadores

--- a/frontend-bingo-velez/src/app/components/pages/user-desactivated/user-desactivated.component.html
+++ b/frontend-bingo-velez/src/app/components/pages/user-desactivated/user-desactivated.component.html
@@ -1,5 +1,6 @@
 <mat-card style="margin-top: 40px;">
     <div class="table-responsive">
+        <button class="btn btn-secondary" (click)="goToUsersActive()">Usuarios activos</button>
         <table class="table">
             <caption>List of users</caption>
             <thead>
