--- a/frontend-bingo-velez/src/app/components/pages/plays-desactivated/plays-desactivated.component.html
+++ b/frontend-bingo-velez/src/app/components/pages/plays-desactivated/plays-desactivated.component.html
@@ -1,14 +1,14 @@
 <mat-card style="margin-top: 40px;">
     <div class="table-responsive">
-        <button class="btn btn-secondary" style="margin-right: 5px;" (click)="openCreatePlayDialog()">Crear jugada</button>
-        <button class="btn btn-primary" (click)="goToPlaysInactives()">Jugadas inactivas</button>
+        <button class="btn btn-secondary" (click)="goToPlaysActive()">Jugadas activas</button>
         <table class="table">
-            <caption>Listado de jugadas</caption>
+            <caption>List of users</caption>
             <thead>
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Nombre</th>
                     <th scope="col">Monto</th>
+                    <th scope="col">Estado</th>
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
@@ -17,12 +17,13 @@
                     <th scope="row"> {{ play.id }} </th>
                     <td> {{ play.name }} </td>
                     <td> {{ play.monto | currency }} </td>
+                    <td> {{ play.state ? "Activo" : "Inactivo" }} </td>
                     <td>
-                        <button class="btn btn-warning" (click)="openUpdatePlayDialog(play)" style="margin-right: 5px;">Actualizar</button>
-                        <button class="btn btn-danger" (click)="deletePlay(play)">Eliminar</button>
+                        <button class="btn btn-primary" (click)="activatePlay(play)">Activar</button>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
 </mat-card>
+
