--- a/frontend-bingo-velez/src/app/components/pages/home/home.component.html
+++ b/frontend-bingo-velez/src/app/components/pages/home/home.component.html
@@ -9,7 +9,7 @@
   <body>
     <main class="main-container">
       <section class="cards">
-        <div class="card" *ngFor="let item of items">
+        <div class="card-cardboard" *ngFor="let item of items">
           <div class="top-content">
             <input type="text" class="input-name"/>
             <button class="refresh-button">
@@ -17,7 +17,7 @@
             </button>
           </div>
           <div class="cuadriculas">
-            <table class="table">
+            <table class="table-cardboard">
               <thead>
                 <tr class="t-head">
                   <th>{{ item.title.B }}</th>
