--- a/frontend-bingo-velez/src/app/components/shared/sidenav/sidenav.component.html
+++ b/frontend-bingo-velez/src/app/components/shared/sidenav/sidenav.component.html
@@ -10,7 +10,7 @@
             class="sidebar-link waves-effect waves-dark sidebar-link"
             aria-expanded="false"
             [routerLink]="['/pages/home']"
-            ><i class="mdi me-2 mdi-gauge"></i
+            ><i class="mdi me-2 mdi-grid"></i
             ><span class="hide-menu">Cartones</span></a
           >
         </li>
@@ -20,7 +20,7 @@
             aria-expanded="false"
             [routerLink]="['/pages/profile/1']"
           >
-            <i class="mdi me-2 mdi-account-check"></i
+            <i class="mdi me-2 mdi-account"></i
             ><span class="hide-menu">Profile</span></a
           >
         </li>
@@ -30,7 +30,7 @@
             href="table-basic.html"
             aria-expanded="false"
             [routerLink]="['/pages/users']"
-            ><i class="mdi me-2 mdi-table"></i
+            ><i class="mdi me-2 mdi-account-multiple"></i
             ><span class="hide-menu">Usuarios activos</span></a
           >
         </li>
@@ -40,7 +40,7 @@
             href="table-basic.html"
             aria-expanded="false"
             [routerLink]="['/pages/desactivatedUsers']"
-            ><i class="mdi me-2 mdi-table"></i
+            ><i class="mdi me-2 mdi-account-multiple-minus"></i
             ><span class="hide-menu">Usuarios inactivos</span></a
           >
         </li>
