funcionando con restructuracion

--- a/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.html
+++ b/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.html
@@ -84,7 +84,7 @@
             class="sidebar-link waves-effect waves-dark sidebar-link"
             href="table-basic.html"
             aria-expanded="false"
-            [routerLink]="['/auth/login']"
+            [routerLink]="['/login']"
             (click)="logOut()"
             ><i class="mdi me-2 mdi-table"></i
             ><span class="hide-menu">Cerrar sesion</span></a
