--- a/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.html
+++ b/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.html
@@ -57,7 +57,7 @@
           >
         </li>
 
-        <li class="sidebar-item">
+        <li *ngIf="isAdmin" class="sidebar-item">
           <a
             class="sidebar-link waves-effect waves-dark sidebar-link"
             href="table-basic.html"
@@ -68,7 +68,7 @@
           >
         </li>
 
-        <li class="sidebar-item">
+        <li *ngIf="isAdmin" class="sidebar-item">
           <a
             class="sidebar-link waves-effect waves-dark sidebar-link"
             href="table-basic.html"
