--- a/frontend-bingo-velez/src/app/modules/settings/plays.component.html
+++ b/frontend-bingo-velez/src/app/modules/settings/plays.component.html
@@ -1,7 +1,7 @@
 <mat-card style="margin-top: 40px;">
     <div class="table-responsive">
         <button class="btn btn-secondary" style="margin-right: 5px;" (click)="openCreatePlayDialog()">Crear jugada</button>
-        <button class="btn btn-primary" *ngIf="isAdmin" (click)="goToPlaysInactives()">Jugadas inactivas</button>
+        <button class="btn btn-primary" (click)="goToPlaysInactives()">Jugadas inactivas</button>
         <table class="table">
             <caption>Listado de jugadas</caption>
             <thead>
@@ -9,7 +9,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Nombre</th>
                     <th scope="col">Monto</th>
-                    <th *ngIf="isAdmin" scope="col">Actions</th>
+                    <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -17,7 +17,7 @@
                     <th scope="row"> {{ play.id }} </th>
                     <td> {{ play.name }} </td>
                     <td> {{ play.monto | currency }} </td>
-                    <td *ngIf="isAdmin">
+                    <td>
                         <button class="btn btn-warning" (click)="openUpdatePlayDialog(play)" style="margin-right: 5px;">Actualizar</button>
                         <button class="btn btn-danger" (click)="deletePlay(play)">Eliminar</button>
                     </td>
