--- a/frontend-bingo-velez/src/app/modules/users-module/pages/profile/profile.component.html
+++ b/frontend-bingo-velez/src/app/modules/users-module/pages/profile/profile.component.html
@@ -33,10 +33,10 @@
                                             id="example-email">
                                     </div>
                                 </div>
-                                <div class="form-group">
+                                <div *ngIf="isAdmin" class="form-group">
                                     <label class="col-sm-12">Seleciona rol</label>
                                     <div class="col-sm-12 border-bottom">
-                                        <select [disabled]="userProfile.ROLE !== 'ADMIN_ROLE'" formControlName="ROLE" class="form-select shadow-none ps-0 border-0 form-control-line">
+                                        <select  formControlName="ROLE" class="form-select shadow-none ps-0 border-0 form-control-line">
                                             <option value="ADMIN_ROLE">ADMINISTRADOR</option>
                                             <option value="USER_ROLE">USUARIO</option>
                                         </select>
