--- a/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.scss
+++ b/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.scss
@@ -1,6 +1,6 @@
 .main-container {
   padding: 15px 0;
-//   border: 3px solid #000;
+  //   border: 3px solid #000;
   margin: 0 10px;
   border-radius: 15px;
   .cards {
@@ -76,6 +76,9 @@
                 justify-content: center;
                 align-items: center;
               }
+              .td-color {
+                background-color: #ddd !important;
+              }
             }
             .middle-row {
               td {
@@ -103,4 +106,3 @@
     }
   }
 }
-
