--- a/frontend-bingo-velez/src/app/modules/settings/pages/settings/settings.component.scss
+++ b/frontend-bingo-velez/src/app/modules/settings/pages/settings/settings.component.scss
@@ -1,3 +1,26 @@
 .settings-container {
   padding: 20px;
+  .cartones-settings {
+    .carton-quantity-form {
+      display: flex;
+      gap: 20px;
+      align-items: center;
+      .input-check-form {
+        label {
+          margin: 0;
+        }
+        .form-check {
+          padding: 0;
+          display: flex;
+          align-items: center;
+          input {
+            margin: 0 !important;
+          }
+        }
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+    }
+  }
 }
