--- a/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.scss
+++ b/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.scss
@@ -44,3 +44,13 @@ section{
 .active:hover{
     background-color: rgba($color: #3f51b5, $alpha: 0.3) !important
 }
+
+
+.example-radio-group {
+    display: inline-flex;
+    flex-direction: column;
+  }
+  
+  .example-radio-button {
+    margin: 5px;
+  }
